syntax = "proto3";

package com.ankr;

option java_package = "com.ankr.proto";
option java_outer_classname = "RelayHubProto";

option go_package = "./;proto";

service RelayHub {
  rpc SignCheckpointProof(SignCheckpointProofRequest) returns (stream SignCheckpointProofReply);
}

message SignCheckpointProofRequest {
}
message SignCheckpointProofReply {
  uint64 epoch_number = 1;
  bytes raw_epoch_block = 2;
  bytes block_hash = 3;
  bytes checkpoint_hash = 4;
  repeated bytes signatures = 5;
  repeated bytes validators = 6;
}
